micro results updated

--- a/ipython/es_micro.ipynb
+++ b/ipython/es_micro.ipynb
@@ -35,13 +35,11 @@
    "source": [
     "## Ratio of different types of edges\n",
     "\n",
-    "* Plots:\n",
-    "   * Left: original network\n",
+    "\n",
     "* Types of edges:\n",
-    "    * influence: when one of the nodes on the new edge was already part of the network\n",
-    "    * random: when both nodes on the new edge are new incoming nodes in the net\n",
-    "    * homophily: when both nodes were already part of the netwowk\n",
-    "    * triangle:  case of homophily, when the initial distance is 2 of the connecting nodes (triangle)"
+    "    * (I) influence: when one of the nodes on the new edge was already part of the network\n",
+    "    * (R) random: when both nodes on the new edge are new incoming nodes in the net\n",
+    "    * (H) homophily: when both nodes were already part of the netwowk"
    ]
   },
   {
